# rdpower

./: .gitattributes  .gitignore  README.md
.github/: SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  publish-python.yml
Python/: rdpower_illustration.py
Python/rdpower/: LICENSE.md  README.md  setup.cfg
Python/rdpower/src/rdpower/: __init__.py  _utils.py  rdmde.py  rdpower.py  rdpower_fun.py  rdsampsi.py
Python/rdpower/tests/: test_numerical_contracts.py
R/: rdpower_illustration.R
R/rdpower/: .Rbuildignore  DESCRIPTION  NAMESPACE
R/rdpower/R/: rdmde.R  rdpower.R  rdpower_fun.R  rdpower_package.R  rdsampsi.R  summary.R
R/rdpower/man/: rdmde.Rd  rdpower-package.Rd  rdpower.Rd  rdsampsi.Rd  summary.rdpower.Rd
docs/audit/baselines/: README.md  python-modernized.json  r-modernized.json  stata-modernized.json
python/: rdpower_illustration.py
python/rdpower/: README.md  ToBuild.txt  setup.cfg
python/rdpower/src/rdpower/: __init__.py  rdmde.py  rdpower.py  rdpower_fun.py  rdsampsi.py
python/rdpower/src/rdpower.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: build-stata-help-pdfs.do  build-stata-help-pdfs.py  check_repository.py
scripts/numerical-baselines/: README.md  compare_baselines.py  run_python_baseline.py  run_r_baseline.R  run_stata_baseline.do
stata/: rdmde.ado  rdmde.sthlp  rdpow.ado  rdpow.sthlp  rdpower.ado  rdpower.pkg  rdpower.sthlp  rdpower_functions.do  rdpower_illustration.do  rdpower_powerNR.mo  rdpower_powerNR_mde.mo  rdpower_powerfun.mo  rdpower_powerfun_dot.mo  rdpower_powerfun_dot_tau.mo  rdpower_senate.dta  rdsampsi.ado  rdsampsi.sthlp  stata.toc
