[metadata]
name = rdpower
version = 2.0.0
author = Matias D. Cattaneo, Ricardo Masini, Rocio Titiunik, Gonzalo Vazquez-Bare
author_email = matias.d.cattaneo@gmail.com, ricardo.masini@gmail.com, rocio.titiunik@gmail.com, gvazquezbare@gmail.com
maintainer = Matias D. Cattaneo
maintainer_email = matias.d.cattaneo@gmail.com
license = GPL-3.0-only
license_files = LICENSE.md
description = Power calculations, sample size calculations, and minimum detectable effect calculations for Regression Discontinuity designs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rdpackages/rdpower
project_urls =
    Bug Tracker = https://github.com/rdpackages/rdpower/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    pandas
    scipy
    rdrobust>=2.0.0
    matplotlib

[options.packages.find]
where = src

[egg_info]
tag_build =
tag_date = 0
