[metadata]
name = rdpower
version = 1.0.1
author = Ricardo Masini
author_email = rmasini@ucdavis.edu
description =  Power Calculations for RD Designs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rdpackages/rdpower
project_urls = 
    Bug Tracker = https://github.com/rdpackages/rdpower/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    numpy
    scipy
    rdrobust>=1.1.0

[options.packages.find]
where = src